changes in  contact

--- a/Contact us.htm
+++ b/Contact us.htm
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="About us.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="contact us.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -55,11 +55,11 @@
               <h1 class="text-center mt-3">Contact information</h1>
               <form class="p-4 mt-5">
                 <div class="mail mb-3">
-                  <a href="tel:+2348135348156"><img src="images/caller.png">08135348156</a>
+                  <a href="tel:+2348135348156"><img src="images/caller.png" width="20px">08135348156</a>
                   <!-- <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com"> -->
                 </div>
                 <div class="mb-3">
-                  <a href="mailto:notageorge2@gmail.com"><img src="images/icon-image.png">notageorge2@gmail.com</a>
+                  <a href="mailto:notageorge2@gmail.com"><img src="images/icon-image.png" width="20px">notageorge2@gmail.com</a>
                   <!-- <label for="exampleFormControlInput1" class="form-label">Email ID</label>
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com"> -->
                 </div>
@@ -86,11 +86,6 @@
       </section>
 
 
-<address>
-  5, esther street
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.2427286754937!2d3.376455373351723!3d6.61673742207624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b93a9d921f055%3A0xe8dcd1e5e40cff70!2s15%20Tokunbo%20Macaulay%20St%2C%20Ikosi%20Ketu%20105102%2C%20Lagos!5e0!3m2!1sen!2sng!4v1695206805507!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</address>
-<a href="mailto:notageorge2@gmail.com">mymail</a>
 
      <!-- FOOTER SECTION -->
 
@@ -148,24 +143,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                  <div class="footer-widget">
-                      <div class="footer-widget-heading">
-                          <h1>Useful Links</h1>
-                      </div>
-                      <ul>
-                          <li><a href="#">Our Team</a></li>
-                          <li><a href="About Us.htm">About Us</a></li>
-                          <li><a href="#">Our Gallery</a></li>
-                          <li><a href="#">Selection Process</a></li>
-                          <li><a href="#">FAQ</a></li>
-                          <li><a href="#">Sponsorship</a></li>
-                          <li><a href="#">Our Policies</a></li>
-                          <li><a href="#">Our Team</a></li>
-                          <li><a href="#">Contact us</a></li>
-                      </ul>
-                  </div>
-              </div>
+          
               <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
                   <div class="footer-widget">
                       <div class="footer-widget-heading">
