--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <div class="col-sm-3">
         <div class="box">
           <h1>Shop Online</h1>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non incidunt nam architecto laboriosam, cumque eveniet quas optio corporis! Eligendi, totam. Reiciendis dolor obcaecati voluptatem! Earum rerum quae quasi odit delectus!</p>
+          <p>Welcome to our seamless shipping experience! At [Your Company], we pride ourselves on delivering fast and reliable service. Expect your order at your doorstep within [X] days, carefully packed and handled with utmost care</p>
         </div>
       </div>
       <div class="col-sm-3">
@@ -327,24 +327,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                  <div class="footer-widget">
-                      <div class="footer-widget-heading">
-                          <h1>Useful Links</h1>
-                      </div>
-                      <ul>
-                          <li><a href="#">Our Team</a></li>
-                          <li><a href="#">About Us</a></li>
-                          <li><a href="#">Our Gallery</a></li>
-                          <li><a href="#">Selection Process</a></li>
-                          <li><a href="#">FAQ</a></li>
-                          <li><a href="#">Sponsorship</a></li>
-                          <li><a href="#">Our Policies</a></li>
-                          <li><a href="#">Our Team</a></li>
-                          <li><a href="#">Contact us</a></li>
-                      </ul>
-                  </div>
-              </div>
+              
               <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
                   <div class="footer-widget">
                       <div class="footer-widget-heading">
