--- a/Contact us.htm
+++ b/Contact us.htm
@@ -61,13 +61,17 @@
                 <address >
                   <a href="https://maps.app.goo.gl/4e1QyWYzHd7TRk5MA" style="color: black; font-size: 2rem ;"><img src="images/icons8-location-24.png" style="width: 30px;">15 Tokunbo Macaulay St, Ikosi Ketu 105102, Lagos</a>
                 </address>
-                <address>
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.2427286754937!2d3.376455373351723!3d6.61673742207624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b93a9d921f055%3A0xe8dcd1e5e40cff70!2s15%20Tokunbo%20Macaulay%20St%2C%20Ikosi%20Ketu%20105102%2C%20Lagos!5e0!3m2!1sen!2sng!4v1695206805507!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </address>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <address>
+                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.2427286754937!2d3.376455373351723!3d6.61673742207624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b93a9d921f055%3A0xe8dcd1e5e40cff70!2s15%20Tokunbo%20Macaulay%20St%2C%20Ikosi%20Ketu%20105102%2C%20Lagos!5e0!3m2!1sen!2sng!4v1695206805507!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </address>
+                  </div>
+                </div>                  
               </div>
             </div>
             <div class="col-sm-6">
-              <img src="/images/ladder.jpg" alt="" style="width: 75%; margin-left: 10rem;">
+              <img src="/images/ladder.jpg" alt="" style="" id="ladder">
             </div>
           </div>
         </div>
