--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 <body>
 
+
+  <!-- navigation section -->
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -45,23 +47,26 @@
   </div>
 </nav>
   
+<!-- hero/banner section -->
 <section class="hero">
     <div class="slide-show-container">
       <div class="wrapper-one">
-        <div class="wrapper-text" style="color: white;">Dummy Text</div>
+        <div class="wrapper-text" style="color: white;">You are welcome to our furniture showcase </div>
       </div>
       <div class="wrapper-two">
-        <div class="wrapper-text">Dummy Text Slide Two</div>
+        <div class="wrapper-text">Choose the product that best suits your spaces</div>
       </div>
     </div>
 </section>
 
+<!-- 
+first section showing brief samples of the products available -->
 <section class="section1">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <h1 class="product-of-the-week">
-                    PRODUCTS OF THE WEEK
+                    OUR PRODUCTS
                 </h1>
             </div>
         </div>
@@ -106,7 +111,7 @@
 
 
 
-
+<!-- section 2 with brief information about the company -->
 <section class="section2">
     <div class="container">
         <div class="row">
@@ -124,6 +129,7 @@
 </section>
 
 
+<!-- This section briefly descrbes the furniture brands available -->
 <section class="section3">
     <div class="container">
         <div class="row">
@@ -193,6 +199,8 @@
 
 </section>
 
+
+<!-- section5 -->
 <section class="section5">
   <div class="container">
     <div class="row">
@@ -252,6 +260,8 @@
 </section>
 
 
+
+<!-- an amazing footer slide with css used as this section7 -->
 <section class="section7">
 
         <div class="pic-ctn">
