change the product dummy text

--- a/zenhaven.html
+++ b/zenhaven.html
@@ -48,10 +48,10 @@
 <section class="hero">
     <div class="slide-show-container">
       <div class="wrapper-one">
-        <div class="wrapper-text" style="color: white;">Dummy Text</div>
+        <div class="wrapper-text" style="color: white;">You are welcome to our furniture showcase</div>
       </div>
       <div class="wrapper-two">
-        <div class="wrapper-text">Dummy Text Slide Two</div>
+        <div class="wrapper-text">Choose the product that best suits your spaces</div>
       </div>
     </div>
 </section>
