--- a/coastalcomfort.html
+++ b/coastalcomfort.html
@@ -51,10 +51,10 @@
 <section class="hero">
     <div class="slide-show-container">
       <div class="wrapper-one">
-        <div class="wrapper-text" style="color: white;">Dummy Text</div>
+        <div class="wrapper-text" style="color: white;">You are welcome to our furniture showcase</div>
       </div>
       <div class="wrapper-two">
-        <div class="wrapper-text">Dummy Text Slide Two</div>
+        <div class="wrapper-text">Choose the product that best suits your spaces</div>
       </div>
     </div>
 </section>
@@ -127,7 +127,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <p class="product-of-the-week-caption">""</p>
+                <p class="product-of-the-week-caption"></p>
             </div>
             
         </div>
