--- a/coastalcomfort.html
+++ b/coastalcomfort.html
@@ -180,7 +180,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <p class="product-of-the-week-caption">""</p>
+                <p class="product-of-the-week-caption"></p>
             </div>
             
         </div>
