--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ first section showing brief samples of the products available -->
         <div class="row">
           <div class="col-sm-12">
               <div class="content-home">
-                <img src="/images/RUSTICCHARMIMG/Saddlebackcounter stoolRUSTICCHARM.jpeg" height="300rem">
+                <img src="/images/RUSTICCHARMIMG/farmHouseTres.jpg" height="300rem">
                   <div class="description">
                       <h1>RUSTIC CHARMMING & URBAN TREND</h1>
                       <p>RUSTIC CHARMMING & URBAN TREND brands are companies or manufacturers that specialize in designing, producing, and selling quality and sustainability furniture products. These brands often have their unique style, quality standards, and customer focus. </p>
@@ -207,26 +207,26 @@ first section showing brief samples of the products available -->
       <div class="col-sm-3">
         <div class="box">
           <h1>Shop Online</h1>
-          <p>Welcome to our seamless shipping experience! At [Your Company], we pride ourselves on delivering fast and reliable service. Expect your order at your doorstep within [X] days, carefully packed and handled with utmost care</p>
+          <p>Welcome to our seamless shipping experience! At DURABLE FURNITURE, we pride ourselves on delivering fast and reliable service. Expect your order at your doorstep within [X] days, carefully packed and handled with utmost care</p>
         </div>
       </div>
       <div class="col-sm-3">
         <div class="box">
-          <h1>Free shippin</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolore rerum sint architecto explicabo incidunt consectetur debitis iusto veritatis ea nesciunt itaque, est expedita vel eius quam deserunt nam? Asperiores?</p>
+          <h1>Free shipping</h1>
+          <p>Introducing our exclusive free shipping offer! When you shop with us, you're not just getting top-quality products, but also the convenience of complimentary shipping. No minimum purchase required. Whether you're treating yourself or surprising a loved one, enjoy the added bonus of free delivery straight to your doorstep.</p>
         </div>
       </div>
       <div class="col-sm-3">
         <div class="box">
           <h1>Return Policy</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo voluptatibus deserunt quos aperiam quibusdam. Illo, provident. Deserunt minus tempora placeat dolor sunt sequi corporis nesciunt exercitationem, facilis blanditiis quibusdam aspernatur?</p>
+          <p>We want you to be completely satisfied with your purchase. If for any reason you are not, we offer a hassle-free return policy. Please ensure the item is in its original condition, with all tags and packaging intact. Returns must be initiated within [10] days of receiving your order.</p>
         </div>
         
       </div>
       <div class="col-sm-3">
         <div class="box">
           <h1>PAYMENT</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores eligendi mollitia eius illo, totam dolorum in ut, quasi esse, ipsum enim quae pariatur aperiam dolore ipsa possimus blanditiis beatae recusandae?</p>
+          <p>At DURABLE FURNITURES, we strive to provide a seamless and secure shopping experience. We accept various payment methods, including credit and debit cards (Visa, MasterCard, American Express), PayPal. All transactions are processed in $. Please note that orders will only be shipped once payment is confirmed.</p>
         </div>
       </div>
     </div>
@@ -241,7 +241,7 @@ first section showing brief samples of the products available -->
           <img src="/images/home/contemporary-living-room-lindsay-pennington-inc-img~0e315e4704bd2cf8_8-5880-1-c9e709e.jpg" alt="">
           <p>27 sep 2022/ by Esthyl Adebayo</p>
           <h1>Family is key</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at, odio nihil assumenda accusantium fugit consequatur facere deserunt perspiciatis aliquam repellendus harum quae corrupti alias. Maiores alias dolore atque sequi.</p>
+          <p>At DURABLE FURNITURES, we understand the significance of family, and it's our privilege to provide products that celebrate these connections. Every piece is crafted with care, symbolizing the enduring bond that family shares. .</p>
           <button>Read more</button>
         </div>
       </div>
@@ -250,7 +250,7 @@ first section showing brief samples of the products available -->
           <img src="/images/home/19710946-vintage-leather-chair-in-room-with-nature-background.jpg" alt="">
           <p>27 sep 2022/ by Meshach Olamide</p>
           <h1>A space to think</h1>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, magnam eum. Fugiat voluptate facilis, id eum velit vel, voluptas suscipit voluptatem similique deserunt molestias quod. Optio pariatur quidem dolorum nostrum.</p>
+          <p> At DURABLE FURNITURES, we believe in providing you with more than just products; we offer a haven for your thoughts to take flight. Each item is crafted with the intention of creating a canvas for your imagination, a vessel for your musings. Because we understand that sometimes, all you need is a space to think.</p>
           <button>Read more</button>
         </div>
       </div>
